add db + auth
